--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Wanderly — Путешествия & Туры</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
- 
+ <meta name="google-site-verification" content="EjFhy3k420h7woBXG70NRNhjKHWHGuWY8iFOMJeQU0s" />
 </head>
 <body>
   <!-- PRELOADER -->
@@ -287,3 +287,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
