--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Wanderly — Путешествия & Туры</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
- <meta name="google-site-verification" content="EjFhy3k420h7woBXG70NRNhjKHWHGuWY8iFOMJeQU0s" />
+ 
 </head>
 <body>
   <!-- PRELOADER -->
@@ -186,17 +186,17 @@
         <h2>Отзывы блогеров и путешественников</h2>
         <div class="testimonials" id="testimonials">
           <div class="testimonial active reveal">
-            <img src="https://i.pravatar.cc/120?img=12" alt="Анна" />
+            <img src="img/Anna.jpg" alt="Анна" />
             <p class="quote">«С Wanderly я наконец-то увидел те места, о которых мечтал — всё было продумано до мелочей»</p>
-            <p class="author">— Джон (@john_titor)</p>
+            <p class="author">— Анна (@anna_kally)</p>
           </div>
           <div class="testimonial reveal">
-            <img src="https://i.pravatar.cc/120?img=5" alt="Алекс" />
+            <img src="img/Simon.jpg" alt="Саймон" />
             <p class="quote">«Маршрут — супер, какие виды! Рекомендую всем любителям активного отдыха»</p>
-            <p class="author">— Мария (@maria_wanders)</p>
+            <p class="author">— Саймон (@simon_wanders)</p>
           </div>
           <div class="testimonial reveal">
-            <img src="https://i.pravatar.cc/120?img=8" alt="Мария" />
+            <img src="img/Alex.jpg" alt="Алекс" />
             <p class="quote">«Команда заботится о деталях. Дети были в восторге от программы»</p>
             <p class="author">— Алекс (@alex_trips)</p>
           </div>
@@ -287,4 +287,3 @@
   <script src="script.js" defer></script>
 </body>
 </html>
-
